# embeddedBootcamp

./: .gitignore
Part1/exercise1/: main.c  userInterface.c  userInterface.h
Part4/exercise1/: main.c  main.h
Project Part 0-Circular Buffers/include/: buffer.h  common.h
Project Part 0-Circular Buffers/source/: buffer.c  main.c  userInterface.c
Project example/: CMakeLists.txt
Project example/include/: circularBuffer.h  userInterface.h
Project example/source/: circularBuffer.c  main.c  userInterface.c
ProjectPart1_QueueBuffers/include/: queue.h
ProjectPart1_QueueBuffers/source/: main.c  queue.c  userInterface.c
ProjectPart2_Scheduler/include/: common.h  scheduler.h
ProjectPart2_Scheduler/source/: main.c  scheduler.c
ProjectPart3_SoftwareTimers/include/: scheduler.h
ProjectPart3_SoftwareTimers/source/: main.c  scheduler.c
ProjectPart4_RTC/include/: common.h  rtc.h
ProjectPart4_RTC/source/: main.c  rtc.c  scheduler.c
ProjectPart5_Integration/include/: common.h  rtc.h
ProjectPart5_Integration_Part1/: build.py
ProjectPart5_Integration_Part2/: CMakeLists.txt
ProjectPart5_Integration_Part2/include/: common.h  scheduler.h
ProjectPart5_Integration_Part2/source/: queue.c  rtc.c  scheduler.c
ProjectPart6_UnitTesting/: CMakeLists.txt  project.yml
ProjectPart6_UnitTesting/App/include/: common.h  queue.h  rtc.h  scheduler.h
ProjectPart6_UnitTesting/App/source/: main.c  queue.c  rtc.c  scheduler.c
ProjectPart6_UnitTesting/Test/: test_queue.c  test_rtcc.c  test_scheduler.c
RIOSExample/: main.c
UnitTestingComplex/: project.yml
(+16 files in other folders)
